--- a/features.ipynb
+++ b/features.ipynb
@@ -31,8 +31,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-25T07:47:12.035627Z",
-     "start_time": "2023-05-25T07:47:10.860264Z"
+     "end_time": "2023-06-30T12:12:10.564825500Z",
+     "start_time": "2023-06-30T12:12:07.891092400Z"
     }
    }
   },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def convert_categorical(df_X, _X):\n",
@@ -67,8 +67,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-25T07:47:12.052637Z",
-     "end_time": "2023-05-25T07:47:12.070638Z"
+     "end_time": "2023-06-30T12:12:10.579825400Z",
+     "start_time": "2023-06-30T12:12:10.565825600Z"
     }
    }
   },
@@ -103,16 +103,15 @@
     }
    ],
    "source": [
-    "dataPath = 'datasets/seen/'\n",
+    "dataPath = 'datasets/ml-1m/'\n",
     "\n",
     "print(\"reading datasets...\")\n",
     "\n",
     "# User-Item-Rating\n",
-    "df = pd.read_csv(dataPath + 'ratings_before_5941.dat', sep='\\::', engine='python', names=['UID', 'MID', 'rate', 'time'])\n",
+    "df = pd.read_csv(dataPath + 'ratings.dat', sep='\\::', engine='python', names=['UID', 'MID', 'rate', 'time'])\n",
     "\n",
     "# User-Side-Information\n",
-    "df_user = pd.read_csv(dataPath + 'users_before_5941.dat', sep='\\::', engine='python', names=['UID', 'gender', 'age',\n",
-    "                                                                                             'job', 'zip'])\n",
+    "df_user = pd.read_csv(dataPath + 'users.dat', sep='\\::', engine='python', names=['UID', 'gender', 'age', 'job', 'zip'])\n",
     "\n",
     "print(\"reading datasets done.\\n\")\n",
     "\n",
@@ -132,33 +131,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-25T07:47:12.372238Z",
-     "end_time": "2023-05-25T07:47:15.941235Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   UID  age1  age2  age3  age4  age5  age6  gender1  gender2  job1  ...  \\\n0    1   1.0   0.0   0.0   0.0   0.0   0.0      1.0      0.0   0.0  ...   \n1    2   0.0   0.0   0.0   0.0   0.0   1.0      0.0      1.0   0.0  ...   \n2    3   0.0   0.0   1.0   0.0   0.0   0.0      0.0      1.0   0.0  ...   \n3    4   0.0   0.0   0.0   0.0   1.0   0.0      0.0      1.0   0.0  ...   \n4    5   0.0   0.0   1.0   0.0   0.0   0.0      0.0      1.0   0.0  ...   \n\n   job12  job13  job14  job15  job16  job17  job18  job19  job20  job21  \n0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n1    0.0    0.0    0.0    0.0    0.0    1.0    0.0    0.0    0.0    0.0  \n2    0.0    0.0    0.0    0.0    1.0    0.0    0.0    0.0    0.0    0.0  \n3    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0  \n4    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    1.0  \n\n[5 rows x 30 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UID</th>\n      <th>age1</th>\n      <th>age2</th>\n      <th>age3</th>\n      <th>age4</th>\n      <th>age5</th>\n      <th>age6</th>\n      <th>gender1</th>\n      <th>gender2</th>\n      <th>job1</th>\n      <th>...</th>\n      <th>job12</th>\n      <th>job13</th>\n      <th>job14</th>\n      <th>job15</th>\n      <th>job16</th>\n      <th>job17</th>\n      <th>job18</th>\n      <th>job19</th>\n      <th>job20</th>\n      <th>job21</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 30 columns</p>\n</div>"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_user.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-25T07:31:39.743841Z",
-     "end_time": "2023-05-25T07:31:39.762842Z"
+     "end_time": "2023-06-30T12:15:28.018477300Z",
+     "start_time": "2023-06-30T12:15:24.100985400Z"
     }
    }
   },
@@ -173,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -200,14 +174,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-25T07:47:43.631784Z",
-     "end_time": "2023-05-25T07:48:58.062623Z"
+     "end_time": "2023-06-30T12:17:35.411136800Z",
+     "start_time": "2023-06-30T12:16:17.657460100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -227,14 +201,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-25T07:48:58.064623Z",
-     "end_time": "2023-05-25T07:49:02.658773Z"
+     "end_time": "2023-06-30T12:17:40.504683200Z",
+     "start_time": "2023-06-30T12:17:35.413137200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -245,10 +219,7 @@
       "start closeness_centrality\n",
       "start betweenness_centrality\n",
       "start load_centrality\n",
-      "start average_neighbor_degree\n",
-      "file [0.005] done.\n",
-      "******************\n",
-      "\n"
+      "start average_neighbor_degree\n"
      ]
     }
    ],
@@ -285,8 +256,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-25T07:49:02.662773Z",
-     "end_time": "2023-05-25T09:02:59.002405Z"
+     "end_time": "2023-06-30T13:38:29.418440600Z",
+     "start_time": "2023-06-30T12:17:40.504683200Z"
     }
    }
   },
@@ -301,12 +272,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file 0.005 done.\n",
+      "******************\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "X_train.to_pickle(\"datasets/combined-u/x_train_alpha(\" + str(alpha_coef) + \").pkl\")\n",
+    "X_train.to_pickle(\"datasets/combined-u/combined_alpha(\" + str(alpha_coef) + \").pkl\")\n",
     "print(f'file {alpha_coef} done.\\n******************\\n')"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T13:51:23.385043600Z",
+     "start_time": "2023-06-30T13:51:23.370043400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
