--- a/user_rating_matrix.ipynb
+++ b/user_rating_matrix.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-29T10:54:01.447038100Z",
-     "start_time": "2023-06-29T10:54:01.205038800Z"
+     "end_time": "2023-06-30T22:35:34.498399900Z",
+     "start_time": "2023-06-30T22:35:34.246554700Z"
     }
    },
    "outputs": [],
@@ -21,68 +21,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "all_users_cluster = pd.read_pickle(\"datasets/combined-u/all_users_cluster.pkl\")\n",
-    "all_clusters_items = pd.read_pickle(\"datasets/combined-u/all_clusters_items.pkl\")"
+    "all_users_cluster = pd.read_pickle(\"datasets/matrices/all_users_cluster.pkl\")\n",
+    "all_clusters_items = pd.read_pickle(\"datasets/matrices/all_cluster_items.pkl\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-29T10:54:02.477235400Z",
-     "start_time": "2023-06-29T10:54:02.460235500Z"
+     "end_time": "2023-06-30T22:35:53.850251300Z",
+     "start_time": "2023-06-30T22:35:53.825235Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     user_id cluster\n",
-      "0          2       0\n",
-      "1          4       0\n",
-      "2          7       0\n",
-      "3          8       0\n",
-      "4         11       0\n",
-      "...      ...     ...\n",
-      "5935    5878      11\n",
-      "5936    5881      11\n",
-      "5937    5961      11\n",
-      "5938    5970      11\n",
-      "5939    5980      11\n",
+      "cluster        0         1         2         3         4         5         6   \\\n",
+      "MID                                                                             \n",
+      "1        4.021127  3.970588  4.232558  4.155894  4.005650  4.327957  3.972222   \n",
+      "2        3.387755  2.833333  3.400000  3.101064  2.898305  3.355556  3.218182   \n",
+      "3        2.945946  3.000000  3.125000  2.957983  3.256410  3.046512  3.136364   \n",
+      "4        3.000000  2.800000  2.800000  2.483871  2.250000  2.926829  2.000000   \n",
+      "5        2.806452  3.000000  3.500000  2.890411  3.105263  3.000000  2.650000   \n",
+      "...           ...       ...       ...       ...       ...       ...       ...   \n",
+      "3948     3.558824  3.520000  3.613636  3.607143  3.637681  3.602740  3.902778   \n",
+      "3949     4.156250  4.200000  3.428571  4.035714  4.033333  3.935484  4.400000   \n",
+      "3950     3.800000  3.673213  3.000000  3.785714  3.857143  3.000000  2.400000   \n",
+      "3951     3.600000  3.673213  3.500000  3.800000  4.000000  2.666667  4.000000   \n",
+      "3952     4.025316  3.500000  3.500000  3.765306  3.333333  3.685714  3.458333   \n",
       "\n",
-      "[5940 rows x 2 columns]\n",
-      "        MID                                name cluster      rate\n",
-      "0         1                    Toy Story (1995)       0  4.172414\n",
-      "1         2                      Jumanji (1995)       0  3.268116\n",
-      "2         3             Grumpier Old Men (1995)       0  2.802632\n",
-      "3         4            Waiting to Exhale (1995)       0  2.571429\n",
-      "4         5  Father of the Bride Part II (1995)       0  3.018868\n",
-      "...     ...                                 ...     ...       ...\n",
-      "46591  3948             Meet the Parents (2000)      11  3.608696\n",
-      "46592  3949          Requiem for a Dream (2000)      11  3.666667\n",
-      "46593  3950                    Tigerland (2000)      11  5.000000\n",
-      "46594  3951             Two Family House (2000)      11  3.834861\n",
-      "46595  3952               Contender, The (2000)      11  3.666667\n",
+      "cluster        7         8         9         10        11  \n",
+      "MID                                                        \n",
+      "1        4.333333  4.180328  4.030303  4.220339  4.294118  \n",
+      "2        3.271845  3.045455  3.488889  2.818182  3.333333  \n",
+      "3        2.894737  2.666667  3.275000  2.562500  3.200000  \n",
+      "4        2.666667  2.000000  3.142857  3.250000  3.500000  \n",
+      "5        2.973684  2.857143  3.600000  2.714286  3.500000  \n",
+      "...           ...       ...       ...       ...       ...  \n",
+      "3948     3.653465  3.620690  3.678571  3.541667  3.888889  \n",
+      "3949     4.400000  4.307692  4.266667  4.142857  3.666667  \n",
+      "3950     4.000000  4.000000  3.714286  3.590105  4.000000  \n",
+      "3951     4.142857  4.750000  3.909091  5.000000  3.831795  \n",
+      "3952     3.781818  3.777778  3.923077  3.666667  4.250000  \n",
       "\n",
-      "[46596 rows x 4 columns]\n"
+      "[3883 rows x 12 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(all_users_cluster)\n",
     "print(all_clusters_items)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-29T10:54:03.534332100Z",
-     "start_time": "2023-06-29T10:54:03.516329100Z"
+     "end_time": "2023-06-30T22:35:54.799687500Z",
+     "start_time": "2023-06-30T22:35:54.749674200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      cluster_0  cluster_1  cluster_2  cluster_3  cluster_4  cluster_5  \\\n",
+      "UID                                                                      \n",
+      "1             0          0          0          0          0          0   \n",
+      "2             1          0          0          0          0          0   \n",
+      "3             0          0          0          1          0          0   \n",
+      "4             1          0          0          0          0          0   \n",
+      "5             0          0          0          1          0          0   \n",
+      "...         ...        ...        ...        ...        ...        ...   \n",
+      "6036          0          0          0          0          0          1   \n",
+      "6037          0          0          0          0          0          0   \n",
+      "6038          0          0          0          0          0          0   \n",
+      "6039          0          0          0          0          0          0   \n",
+      "6040          0          0          0          1          0          0   \n",
+      "\n",
+      "      cluster_6  cluster_7  cluster_8  cluster_9  cluster_10  cluster_11  \n",
+      "UID                                                                       \n",
+      "1             0          0          0          1           0           0  \n",
+      "2             0          0          0          0           0           0  \n",
+      "3             0          0          0          0           0           0  \n",
+      "4             0          0          0          0           0           0  \n",
+      "5             0          0          0          0           0           0  \n",
+      "...         ...        ...        ...        ...         ...         ...  \n",
+      "6036          0          0          0          0           0           0  \n",
+      "6037          0          0          0          1           0           0  \n",
+      "6038          0          0          0          1           0           0  \n",
+      "6039          0          0          0          1           0           0  \n",
+      "6040          0          0          0          0           0           0  \n",
+      "\n",
+      "[6040 rows x 12 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all_users_cluster)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T22:35:55.674136600Z",
+     "start_time": "2023-06-30T22:35:55.628989200Z"
     }
    }
   },
