--- a/AE.ipynb
+++ b/AE.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -27,11 +27,7 @@
     "warnings.filterwarnings(\"ignore\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-23T21:30:14.983818600Z",
-     "start_time": "2023-06-23T21:30:14.965818100Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -45,17 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "data = pd.read_pickle(\"datasets/combined-u/x_train_split_alpha(0.005).pkl\")"
+    "data = pd.read_pickle(\"datasets/combined-u/combined_alpha(0.005)_train_ae.pkl\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-23T21:30:16.384803600Z",
-     "start_time": "2023-06-23T21:30:16.364978400Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def create_ae(input_dim, hidden_dim, encoding_dim, noise_factor):\n",
@@ -83,18 +75,13 @@
     "    decoder_layer1 = Dense(hidden_dim, activation='relu', name='decoding_layer')(latent)\n",
     "    output_layer = Dense(input_dim, activation='sigmoid', name='decoder_output')(decoder_layer1)\n",
     "\n",
-    "    autoencoder = Model(input_layer, output_layer)\n",
-    "    encoder = Model(input_layer, latent)\n",
+    "    autoencoder = Model(input_layer, output_layer, name='autoencoder')\n",
     "\n",
     "    autoencoder.compile(optimizer='adam', loss='mse')\n",
-    "    return autoencoder, encoder"
+    "    return autoencoder"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-23T21:30:17.221148600Z",
-     "start_time": "2023-06-23T21:30:17.200140300Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -108,40 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fold: 1\n",
-      "Best model updated\n",
-      "Best MSE: 0.03844\n",
-      "\n",
-      "fold: 2\n",
-      "Best model updated\n",
-      "Best MSE: 0.03501\n",
-      "\n",
-      "fold: 3\n",
-      "fold: 4\n",
-      "fold: 5\n",
-      "fold: 6\n",
-      "Best model updated\n",
-      "Best MSE: 0.03438\n",
-      "\n",
-      "fold: 7\n",
-      "Best model updated\n",
-      "Best MSE: 0.03417\n",
-      "\n",
-      "fold: 8\n",
-      "fold: 9\n",
-      "fold: 10\n",
-      "The best model was found at index #7\n",
-      "Best MSE: 0.03417\n",
-      "Average loss score across all folds: 0.03644\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "input_dim = 35\n",
     "hidden_dim = 16\n",
@@ -161,25 +116,25 @@
     "\n",
     "    X_train, X_test = data.iloc[train_index], data.iloc[test_index]\n",
     "\n",
-    "    autoencoder, encoder = create_ae(input_dim, hidden_dim, encoding_dim, noise_factor)\n",
+    "    autoencoder = create_ae(input_dim, hidden_dim, encoding_dim, noise_factor)\n",
     "\n",
     "    history = autoencoder.fit(X_train, X_train, epochs=100, batch_size=32, shuffle=True, validation_split=0.1, verbose=0)\n",
     "\n",
     "    # Plot the validation loss over 100 epochs\n",
-    "    # val_loss = history.history['val_loss']\n",
-    "    # epochs = range(1, len(val_loss) + 1)\n",
-    "    # plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
-    "    # best_epoch = val_loss.index(min(val_loss)) + 1\n",
-    "    # best_val_loss = round(val_loss[best_epoch-1], 4)\n",
-    "    # plt.plot(best_epoch, min(val_loss), 'ro', label='Best epoch')\n",
-    "    # plt.annotate(f'Best epoch: {best_epoch}\\nVal loss: {best_val_loss}',\n",
-    "    #              xy=(best_epoch, min(val_loss)), xytext=(best_epoch, min(val_loss)),\n",
-    "    #              arrowprops=dict(facecolor='black', shrink=0.05))\n",
-    "    # plt.title('Validation loss')\n",
-    "    # plt.xlabel('Epochs')\n",
-    "    # plt.ylabel('Loss')\n",
-    "    # plt.legend()\n",
-    "    # plt.show()\n",
+    "    val_loss = history.history['val_loss']\n",
+    "    epochs = range(1, len(val_loss) + 1)\n",
+    "    plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
+    "    best_epoch = val_loss.index(min(val_loss)) + 1\n",
+    "    best_val_loss = round(val_loss[best_epoch-1], 4)\n",
+    "    plt.plot(best_epoch, min(val_loss), 'ro', label='Best epoch')\n",
+    "    plt.annotate(f'Best epoch: {best_epoch}\\nVal loss: {best_val_loss}',\n",
+    "                 xy=(best_epoch, min(val_loss)), xytext=(best_epoch, min(val_loss)),\n",
+    "                 arrowprops=dict(facecolor='black', shrink=0.05))\n",
+    "    plt.title('Validation loss')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
     "\n",
     "    # Evaluate the denoising autoencoder on the testing data for this fold\n",
     "    loss_score = autoencoder.evaluate(X_test, X_test, verbose=0)\n",
@@ -208,11 +163,7 @@
     "print(\"Average loss score across all folds: {:.5f}\".format(avg_loss_score))"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-23T21:39:38.517139800Z",
-     "start_time": "2023-06-23T21:33:11.228168500Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -226,26 +177,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "autoencoder.save(\"models/combined-u/autoencoder.h5\")\n",
-    "encoder.save(\"models/combined-u/encoder.h5\")"
+    "# Save the best autoencoder\n",
+    "autoencoder = best_model\n",
+    "encoder = Model(autoencoder.input, autoencoder.get_layer('latent').output, name='encoder')\n",
+    "\n",
+    "# Print the model summary\n",
+    "autoencoder.summary()\n",
+    "encoder.summary()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-23T21:42:50.401663300Z",
-     "start_time": "2023-06-23T21:42:50.367662500Z"
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# autoencoder.save(\"models/autoencoder.h5\")\n",
+    "# encoder.save(\"models/encoder.h5\")"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
